# AnkiAI

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  demo_chunker.py  demo_generation.py  flashcards.apkg  nixpacks.toml  package-lock.json  pyproject.toml  railway.json
.claude/: settings.local.json
ankiai-frontend/: index.html  package-lock.json  package.json  vite.config.js
ankiai-frontend/src/: App.jsx  index.css
ankiai-frontend/src/components/: ErrorDisplay.jsx  ProgressSection.jsx  ResultsSection.jsx  UploadSection.jsx
ankiai-frontend/src/hooks/: useWebSocket.js
docs/: anki_project_guide.md  claude_code_workflow.md  generation_module_review.md  manual_testing.md
experiments/: run_experiments.py
experiments/results_2026_01_27_09_03/: summary.json  summary_all_configs.md
experiments/results_2026_01_27_09_03/baseline/: Untitled  flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
experiments/results_2026_01_27_09_03/rag_k1/: flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
experiments/results_2026_01_27_09_03/rag_k10/: flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
experiments/results_2026_01_27_09_03/rag_k3/: flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
experiments/results_2026_01_27_09_03/rag_k5/: flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
experiments/results_2026_01_27_09_27/: summary.json  summary_all_configs.md
experiments/results_2026_01_27_09_27/baseline/: flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
experiments/results_2026_01_27_09_27/rag_k1/: flashcards.apkg  flashcards.json  flashcards_readable.md  summary.txt
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  config.js  index.css
scripts/: export_flashcards.sh  testrun.sh
src/api/: __init__.py  main.py
src/application/: flashcard_service.py
src/infrastructure/: config.py
tests/: conftest.py
tests/api/: __init__.py  conftest.py  test_download.py  test_generate.py  test_jobs.py  test_upload.py  test_websocket.py
tests/integration/: test_embedding_pipeline.py  test_flashcard_generation_rag.py  test_generation_pipeline.py  test_rag_retrieval.py
(+64 files in other folders)
