[project]
name = "ankiai"
version = "0.1.0"
description = ""
authors = [
    {name = "wielas",email = "wiel4sso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "anthropic (>=0.72.0,<0.73.0)",
    "chromadb (>=1.3.0,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "genanki (>=0.13.1,<0.14.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tiktoken (>=0.9.0,<1.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "python-multipart (>=0.0.20,<1.0.0)",
    "websockets (>=15.0,<16.0)",
    "aiofiles (>=24.0.0,<25.0.0)",
]

[tool.poetry]
packages = [{include = "ankiai", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "api: Tests that make real API calls",
]
filterwarnings = [
    "ignore:builtin type Swig.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]
